--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,12 +7,21 @@ html, body {
 }
 
 /* Navbar config */
-.container-fluid {
+.container {
   margin: 0 100px 0 100px;
+  width: 96.5%
+}
+.container-fluid {
+  padding: 0 100px 0 100px;
   width: 96.5%
 }
 .navbar {
   padding: 1.5rem 0 0.5rem 0;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 9999;
+  width: 100%;
 }
 .navbar-collapse {
   flex-grow: 0;
@@ -34,7 +43,7 @@ html, body {
 
 /* First section */
 .home-section-1 {
-  margin-top: 50px;
+  margin-top: 100px;
 }
 .home-text {
   line-height: 1.6;
@@ -44,3 +53,20 @@ html, body {
 .home-text-2 {
   color: #386EEB;
 }
+.btn-light {
+  height: 50px;
+  width: 200px;
+  border-radius: 10px;
+  font-size: 18px;
+  color: #ffffff;
+  background-color: #386EEB;
+}
+.home-circle {
+  width: 400px;
+  height: 400px;
+  border-radius: 30% 70% 70% 30% / 30% 29% 71% 70% ;
+  background-color: #386EEB;
+}
+
+
+/* Border-radius: 47% 47% 49% 52% / 46% 0% 54% 54% ; */
