--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -61,12 +61,24 @@ html, body {
   color: #ffffff;
   background-color: #386EEB;
 }
+.home-social {
+  margin-top: 70px;
+}
+.home-social-icon {
+  padding: 0 20px 0 0;
+  color: #313738;
+}
+.home-social-icon:hover {
+  padding: 0 20px 0 0;
+  color: #386EEB;
+}
 .home-circle {
-  width: 400px;
-  height: 400px;
-  border-radius: 30% 70% 70% 30% / 30% 29% 71% 70% ;
+  width: 380px;
+  height: 380px;
+  border-radius: 30% 70% 54% 46% / 30% 29% 71% 70% ;
   background-color: #386EEB;
+  margin-left: 70px;
 }
 
 
-/* Border-radius: 47% 47% 49% 52% / 46% 0% 54% 54% ; */
+/* Border-radius: 30% 70% 70% 30% / 30% 29% 71% 70% ; */
