--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -63,6 +63,7 @@ html, body {
 }
 .home-social {
   margin-top: 70px;
+  display: flex;
 }
 .home-social-icon {
   padding: 0 20px 0 0;
@@ -80,5 +81,18 @@ html, body {
   margin-left: 70px;
 }
 
+/* Second section */
+.about-head-text {
+  text-align: center;
+  margin-top: 35px;
+  font-weight: 600;
+  color: #386EEB;
+}
+.about-section {
+  margin-top: 50px;
+}
+.about-img {
+  width: 300px;
+  border-radius: 2%;
 
-/* Border-radius: 30% 70% 70% 30% / 30% 29% 71% 70% ; */
+}
