--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -154,3 +154,24 @@ width: 95%;
 .skills-ui-ux {
   width: 85%;
 }
+#skills {
+  padding-top: 50px;
+  margin-bottom: 50px;
+}
+
+/* Work section */
+.work-head-text {
+  text-align: center;
+  margin-top: 35px;
+  font-weight: 600;
+  color: #386EEB;
+}
+.work-section {
+  margin-top: 50px;
+}
+.work-img {
+  box-shadow: 0 4px 25px rgba(14, 36, 49, .15);
+  border-radius: .5rem;
+  overflow: hidden;
+  margin: 0 0 20px 0;
+}
