--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -187,3 +187,24 @@ width: 95%;
   font-weight: 600;
   color: #386EEB;
 }
+
+/* Scroll to the top button */
+#myBtn {
+  display: none;
+  position: fixed; 
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  border: none;
+  outline: none;
+  background-color: #386EEB;
+  color: white;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 10px;
+  font-size: 18px;
+}
+
+#myBtn:hover {
+  background-color: #555;
+}
