--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -34,9 +34,9 @@ html, body {
   padding: 0 20px 0 20px;
 }
 .navbar-expand-lg .navbar-nav .nav-link:hover {
-  border-bottom: 3px solid #005674;
+  border-bottom: 3px solid #386EEB;
 }
-.navbar-expand-lg .navbar-nav .nav-link.active {
+.navbar-expand-lg .navbar-nav .nav-link:active {
   border-bottom: 3px solid #005674;
   color: #005674;
 }
